--- a/template-2/style.css
+++ b/template-2/style.css
@@ -185,7 +185,7 @@ body {
 }
 
 #b1 section:hover i {
-	display: block;
+/*	display: block;*/
 }
 
 #b1 button {
@@ -237,3 +237,166 @@ body {
 
 /*--- END B1---*/
 
+hr {
+	padding: 1px;
+/*	border-bottom: 0.5px solid #02b3e4;*/
+/*	margin: 0px auto;*/
+/*	transform: skew(-45deg) scaleX(7);*/
+	box-shadow: inset 0px 0px 1px #0078CA;
+}
+
+/*--- B2 ---*/
+#b2 {
+/*	background-color: #F5F9FC;*/
+	padding: 50px 0px;
+}
+
+#b2 > div {
+	width: 100%;
+}
+
+#b2 h1 {
+	margin-top: 0px;
+	text-align: center;
+}
+
+#b2 ul {
+	width: 40%;	
+	list-style: none;
+	padding: 0px;
+/*	float: left;*/
+}
+
+#b2 li {
+	padding: 10px;
+	border-bottom: 1px solid lightgray;
+	cursor: pointer;
+	color: gray;
+	transition-duration: 0.5s;
+}
+
+#b2 li:hover {
+	box-shadow: -1px 0px 10px darkslategray;
+	color: dimgray;
+}
+
+#b2 li:focus {
+	background-color: rgba(2, 179, 228, 0.6);
+	color: white;
+}
+
+#b2 .image {
+	width: 40%;
+/*		float: right;*/
+}
+
+#b2 img {
+	width: 100%;
+	border-radius: 10px;
+	box-shadow: 0px 2px 20px 0 rgba(46, 61, 73, 1);
+}
+/*--- END B2 ----*/
+
+/*--- B3 ---*/
+
+#b3 {
+	text-align: center;
+}
+
+#b3 h1 {
+	font-family: "Dotum";
+	padding: 50px;
+/*	font-size: 30px;*/
+/*	letter-spacing: 1px;*/
+}
+
+#b3 h2:nth-last-child(3) {
+	margin-bottom: 100px;
+}
+
+#b3 button {
+	border-radius: 50px;
+	width: 250px;
+	font-size: 1.5em;
+    line-height: 1.25em;
+    padding: .7em 0 .8em;
+	border-color: #0078CA;
+    color: #fff !important;
+    background-color: #0078CA;
+	margin-bottom: 20px;
+}
+
+#b3 button:hover {
+	background-color: #0065AA;
+}
+
+#b3 img {
+	border-radius: 10px;
+	margin: 20px;
+/*	display: block;*/
+}
+/*--- END B3 ---*/
+
+/*--- B4 ---*/
+#b4 h1 {
+	font-family: "Dotum";
+/*	color: white;*/
+}
+
+#b4 ul.reviews {
+	list-style: none;
+/*	display: inline-flex;*/
+/*	width: 100%;*/
+	overflow-x: scroll;
+	white-space: nowrap;
+	padding: 10px;
+}
+
+#b4 li.review {
+	background-color: azure;
+	width: 350px;
+	display: inline-block;
+	box-shadow: 0px 0px 10px lightgray;
+	white-space: normal;
+	cursor: pointer;
+	padding: 20px;
+	margin-right: 7vw;
+}
+
+.reviews::-webkit-scrollbar {
+	height: 3px;
+}
+
+.reviews::-webkit-scrollbar-track {
+    background-color: #ebebeb;
+    -webkit-border-radius: 50px;
+	border-radius: 50px;
+}
+
+.reviews::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 50px;
+    background: lightgray;
+}
+
+#b4 li.review:nth-last-child(1) {
+	margin-right: 0px;
+}
+
+#b4 li.review:hover {
+	box-shadow: 0px 0px 10px gray;
+}
+
+#b4 .h4 {
+	font-size: 10px
+}
+
+#b4 .start {
+	margin-top: -10px;
+	width: 10%;
+	font-size: 50px;
+	float: left;
+	height: 100%;
+/*	padding: 10px;*/
+}
+/*--- END B4 ---*/
